Logo wrap fixing.

--- a/style.css
+++ b/style.css
@@ -1085,12 +1085,10 @@ article.post .post-title a,
 
 #logo-area {
     margin-top: 10px;
-}
-
-a#logo-area:link {
     text-decoration: none;
     vertical-align: middle;
     display: inline-block;
+    max-width: 100%;
 }
 
 img.logo-img {
